# hyperpixel-init

./: .envrc  .gitignore  Cargo.toml  default.nix  default_old.nix  flake.nix  result  shell.nix
.cargo/: config
.github/: dependabot.yaml
.github/workflows/: build.yml  ci.yaml  clippy.yml  update-flakes.yaml
bcm_host_sys/: Cargo.toml  build.rs
bcm_host_sys/src/: wrapper.h
hyperpixel_init/: Cargo.toml  main.c
hyperpixel_init/src/: main.rs
nix/: default.nix  sources.json
src/: gpio.rs  hyperpixel.rs  main.rs
