[package]
name = "hyperpixel_init"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
flexi_logger = { version = "0.24.1", features = ["colors"] }
libc = "0.2.137"
log = "0.4.14"

[profile.release]
lto = "fat"
codegen-units = 1
